# Bin2Text.py

./: .gitignore  .gitlab-ci.yml  ReadMe.md  pyproject.toml
Bin2Text/: __init__.py  __main__.py
tests/: makeTest.py  original.txt  tests.py
