[build-system]
requires = ["setuptools>=61.2.0", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "Bin2Text"
readme = "ReadMe.md"
description = "An extremily simple and restricted tool/lib converting binary data into text that can be processed with unsuperwised character-level natural language processing tools/libs."
authors = [{name = "KOLANICH"}]
classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["Bin2Text"]
license = {text = "Unlicense"}
requires-python = ">=3.4"
dynamic = ["version"]

[project.scripts]
Bin2Text = "Bin2Text.__main__:main"

[project.urls]
Homepage = "https://codeberg.org/KOLANICH-libs/Bin2Text.py"

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
include = ["Bin2Text", "Bin2Text.*"]

[tool.setuptools_scm]
